@@ -52,6 +52,14 @@ us a note on ns-developers mailing list.  </p>
 
 <h2>New API:</h2>
 <ul>
+<li><b>Athstats</b>
+<p>New classes AthstatsWifiTraceSink and AthstatsHelper.
+</p>
+</li>
+<li><b>WifiRemoteStationManager </b>
+<p>New trace sources exported by WifiRemoteStationManager: MacTxRtsFailed, MacTxDataFailed, MacTxFinalRtsFailed and MacTxFinalDataFailed.
+</p>
+</li>
 <li><b> IPv6 additions</b>
 <p> Add an IPv6 protocol and ICMPv6 capability.
 <ul>
